# nvc

./: .clang-format  .gitignore  CMakeLists.txt  bin.nv  sample.nv
include/: nvc_ast.h  nvc_compiler.h  nvc_lexer.h  nvc_output.h
src/: main.c  nvc_ast.c  nvc_compiler.c  nvc_lexer.c  nvc_output.c
